# auto_game

./: .gitignore  README.md  build_release.bat  build_release.py  compare_codebases.py  launcher.py  main.py  requirements_310.txt  requirements_nada_room.txt  requirements_nanda_room_matcher.txt  requirements_sam3.txt  restart.bat  和平精英全流程优化问题清单.md  和平精英全流程优化问题清单.xlsx  标注工具和框架说明.md
aw/autogame/: restart.bat
aw/autogame/customs_examples/Auto_PUBG_ALL/resource/pubg_room_search/perception/sam3/: README.md  __init__.py  client.py  config.py  geometry.py  pyproject.toml  requirements-server.txt  segmenter.py  server.py
daily_work/: 2026-06-04.md  2026-06-04_daily_work.xlsx
docs/: 2026-07-20-工作总结.md  和平精英自动化优化项目排期_20260622.md  和平精英自动化运行说明.md  标注工具使用说明.md
hoscrcpy_sdk/: HosRemoteDevice.py  ScreenCapCallback.py  build.bat
hoscrcpy_sdk-2d-python/demo/: h264.html  test.py  websocket_test.py
hoscrcpy_sdk/environment/: device.py  (+1 more)
remote_brain/: README.md  __init__.py  client.py  protocol.py  server.py
test_scripts/: mark_entry_points_on_map.py
tests/: test_forbidden_landing_navigation.py  test_game_launch_profile.py  test_house_entry_filter.py  test_label_resolution_capture.py  test_label_tool_without_scene_pool.py  test_launcher_hdc_disconnect.py  test_launcher_label_tool.py  test_parachute_manager.py  test_phase_time_manager.py  test_pubg_terminal_state.py  test_r_city_entry_logic.py  test_r_city_house_scene_search.py  test_stage_grouping.py  test_stream_client_disconnect.py  test_structured_log.py
work/: trace-business-logic-house-entry.md
流程图/: 总流程图.md
(+184 files in other folders)
